--- a/static/peach.css
+++ b/static/peach.css
@@ -3,17 +3,107 @@
  * SPDX-License-Identifier: ISC
  */
 
-p {
-    margin: 0;
+@font-face {
+  font-family: Roboto;
+  src: url('/static/font/RobotoFlex-Regular.ttf');
+  font-display: swap;
 }
 
-.peach-container {
+body {
+    font-family: Roboto, sans-serif;
+    text-transform: lowercase;
+}
+
+.peach {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.root-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
 
-.timeline .container {
+@media (min-width: 440px)  {
+    .root-container {
+	width: 440px;
+    }
+}
+
+.header-container,
+.main-container {
+    display: flex;
+    justify-content: center;
+}
+
+.header-container h1 {
+    margin: 0;
+}
+
+.header {
+    margin-top: 10px;
+    margin-bottom: 15px;
+    font-size: 1.5em;
+}
+
+.period-container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 25px;
+}
+
+.now-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.temperature-forecast-container {
+    display: grid;
+    grid-template-columns: 10% 70px auto 10%;
+    grid-template-rows: auto;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    column-gap: 5px;
+}
+
+.temperature-forecast-container .temperature {
+    font-size: 2.2em;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.temperature-forecast-container .forecast {
+    font-size: 1.8em;
+    font-weight: 500;
+    color: rgb(90,90,90);
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+.wind-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 10px;
+    color: rgb(90,90,90);
+}
+
+.current-period-container {
+    font-size: 0.9em;
+    color: rgb(150,150,150);
+}
+
+.timeline-container {
+    display: flex;
+    justify-content: center;
+    color: rgb(230,230,230);
+}
+
+.periods-container {
+    width: 440px;
     display: flex;
     justify-content: space-around;
     align-content: space-around;
