update name in copyright
Use full name.

--- a/static/peach.css
+++ b/static/peach.css
@@ -1,5 +1,5 @@
 /**
- * Copyright © 2022 siddharth <s@ricketyspace.net>
+ * Copyright © 2022 siddharth ravikumar <s@ricketyspace.net>
  * SPDX-License-Identifier: ISC
  */
 
