--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>peach - {{.Location}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="siddharth">
+		<meta name="author" content="siddharth ravikumar">
 		<link rel="preload" href="/static/peach.css" as="style" />
 		<style>@import url("/static/peach.css");</style>
 	</head>
