peach: update Weather
Add a Title field.

--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>peach - {{.Location}}</title>
+		<title>peach - {{.Title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="siddharth ravikumar">
 		<link rel="preload" href="/static/peach.css" as="style" />
