--- a/templates/search.tmpl
+++ b/templates/search.tmpl
@@ -13,13 +13,13 @@
 			<div class="root-container">
 
 				<div class="search-container">
-					<form method="post">
+					<form method="post" class="search-form">
 						<div class="search-box">
 							<input type="text"  class="location" placeholder="us city"
 								value="{{ .Location }}" name="location" required>
 						</div>
-						<div class="search-btn">
-							<input type="submit" value="search">
+						<div class="btn-block">
+							<input type="submit" class="search-btn" value="➮">
 						</div>
 					</form>
 				</div>
