--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -64,6 +64,11 @@
 				</div>
 				{{ end }}
 
+				<div class="search-link-container">
+					<a href="/search">
+						Search
+					</a>
+				</div>
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
 	</body>
