--- a/templates/search.tmpl
+++ b/templates/search.tmpl
@@ -19,7 +19,7 @@
 								value="{{ .Location }}" name="location" required>
 						</div>
 						<div class="btn-block">
-							<input type="submit" class="search-btn" value="➮">
+							<input type="submit" class="search-btn" value="search">
 						</div>
 					</form>
 				</div>
