--- a/templates/search.tmpl
+++ b/templates/search.tmpl
@@ -5,8 +5,8 @@
 		<title>peach - {{.Title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="siddharth ravikumar">
-		<link rel="preload" href="/static/peach.css?{{ .Version }}" as="style" />
-		<style>@import url("/static/peach.css?{{ .Version }}");</style>
+		<link rel="preload" href="/static/peach.min.css?{{ .Version }}" as="style" />
+		<style>@import url("/static/peach.min.css?{{ .Version }}");</style>
 	</head>
 	<body>
 		<div class="peach">
