weather: update `Weather`
Add `SearchEnabled` field. Used to determined weather to render a link
to the search or not.

--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -82,11 +82,14 @@
 				</div>
 				{{ end }}
 
+				{{ if .SearchEnabled }}
 				<div class="search-link-container">
 					<a href="/search">
 						➤
 					</a>
 				</div>
+				{{ end }}
+
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
 	</body>
