templates/about.tmpl: fix typo

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -56,7 +56,7 @@
 					<div class="content">
 						<p>
 							Your IP address and the user agent header
-							of your browser gets itched into an
+							of your browser gets etched into an
 							ephemeral log when you use Peach.</p>
 
 						<p>Peach does not use cookies.</p>
