--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -54,14 +54,10 @@
 						<h2>privacy</h2>
 					</div>
 					<div class="content">
-						<p>
-							Your IP address and the user agent header
-							of your browser gets etched into an
-							ephemeral log when you use Peach.</p>
-
-						<p>Peach does not use cookies.</p>
-
-						<p>That's it.</p>
+						<p>Peach does not use cookies. It does not
+						track your location and it's indifferent about
+						what you use to access it. It wants to know
+						nothing about you.</p>
 					</div>
 				</div> <!-- privacy-container end -->
 
