--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -14,6 +14,7 @@
 				<div class="about-container">
 					<div class="header">
 						<h1>peach</h1>
+						<p>v{{ .Version }}</p>
 					</div>
 					<div class="content">
 						<p>Peach's a barebones weather service.</p>
