--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -61,6 +61,17 @@
 						nothing about you.</p>
 					</div>
 				</div> <!-- privacy-container end -->
+
+				<div class="footer-container">
+					<div class="footer">
+						<div class="logo-container">
+							<a href="/">
+								<img src="/static/logo/peach.png" alt="[ peach logo]" />
+							</a>
+						</div>
+					</div>
+				</div> <!-- footer container end -->
+
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
 	</body>
