--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -119,6 +119,16 @@
 				</div>
 				{{ end }}
 
+				<div class="footer-container">
+					<div class="footer">
+						<div class="logo-container">
+							<a href="/about">
+								<img src="/static/logo/peach.png" alt="[ peach logo]" />
+							</a>
+						</div>
+					</div>
+				</div> <!-- footer container end -->
+
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
 	</body>
