templates/weather.tmpl: use footer.tmpl

--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -114,15 +114,7 @@
 				</div>
 				{{ end }}
 
-				<div class="footer-container">
-					<div class="footer">
-						<div class="logo-container">
-							<a href="/about">
-								<img src="/static/logo/peach.png" alt="[ peach logo]" />
-							</a>
-						</div>
-					</div>
-				</div> <!-- footer container end -->
+				{{ template "footer.tmpl" }}
 
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
