templates: update footer.tmpl

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,7 +1,7 @@
 <div class="footer-container">
 	<div class="footer">
 		<div class="logo-container">
-			<a href="/about">
+			<a href="{{ . }}">
 				<img src="/static/logo/peach-180.png" alt="[ peach logo ]" />
 			</a>
 		</div>
