--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -114,7 +114,7 @@
 				</div>
 				{{ end }}
 
-				{{ template "footer.tmpl" }}
+				{{ template "footer.tmpl" "/about" }}
 
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
