templates/about.tmpl: use footer.tmpl

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -57,15 +57,7 @@
 					</div>
 				</div> <!-- privacy-container end -->
 
-				<div class="footer-container">
-					<div class="footer">
-						<div class="logo-container">
-							<a href="/">
-								<img src="/static/logo/peach.png" alt="[ peach logo]" />
-							</a>
-						</div>
-					</div>
-				</div> <!-- footer container end -->
+				{{ template "footer.tmpl" "/" }}
 
 			</div> <!-- root-container end -->
 		</div> <!-- peach end -->
