templates/footer.tmpl: add width and height attrs for peach img

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -2,7 +2,8 @@
 	<div class="footer">
 		<div class="logo-container">
 			<a href="{{ . }}">
-				<img src="/static/logo/peach-180.png" alt="[ peach logo ]" />
+				<img src="/static/logo/peach-180.png"
+					width="20" height="20" alt="[ peach logo ]" />
 			</a>
 		</div>
 	</div>
