templates/head.tmpl: add `description` and `theme-color` meta elements

--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -2,6 +2,8 @@
 <title>peach &mdash; {{.Title}}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="author" content="siddharth ravikumar">
+<meta name="description" content="peach - barebones weather service">
+<meta name="theme-color" content="#000000"/>
 <link rel="icon" href="/static/logo/peach-180.png" sizes="180x180" type="image/png">
 <link rel="apple-touch-icon" href="/static/logo/peach-152.png" sizes="152x152" type="image/png">
 <link rel="apple-touch-icon" href="/static/logo/peach-114.png" sizes="114x114" type="image/png">
