templates/about.tmpl: update terms and privacy

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -27,21 +27,10 @@
 					</div>
 					<div class="content">
 						<p>
-							Peach's available for anybody to use.
-						</p>
-
-						<p>
 							It is licensed under the
 							<a href="//git.ricketyspace.net/peach/tree/LICENSE">ISC license</a>. Your
 							use of this service indicates an implicit
 							agreement to the terms of this license.</p>
-
-						<p>
-							Peach's source code can be found at
-							<a href="//ricketyspace.net/peach">
-								ricketyspace.net/peach
-							</a>.
-						</p>
 					</div>
 				</div> <!-- terms-container end -->
 
@@ -51,8 +40,7 @@
 					</div>
 					<div class="content">
 						<p>Peach does not use cookies. It does not
-						track your location and it's indifferent about
-						what you use to access it. It wants to know
+						track your location and it wants to know
 						nothing about you.</p>
 					</div>
 				</div> <!-- privacy-container end -->
