templates/weather.tmpl: update alerts section
Don't render instruction block if `{{ .Instruction }}` is empty.

--- a/templates/weather.tmpl
+++ b/templates/weather.tmpl
@@ -75,11 +75,13 @@
 								<p>{{ $p }}</p>
 								{{ end }}
 							</div>
+							{{ if len .Instruction |  gt 0 }}
 							<div class="instruction">
 								{{ range $p := .Instruction }}
 								<p>{{ $p }}</p>
 								{{ end }}
 							</div>
+							{{ end }}
 						</div>
 					</div>
 					{{ end }}
