static/logo: change logo file names

--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -4,15 +4,15 @@
 <meta name="author" content="siddharth ravikumar">
 <meta name="description" content="peach - barebones weather service">
 <meta name="theme-color" content="#ffffff"/>
-<link rel="icon" href="/static/logo/peach-180.png" sizes="180x180" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-152.png" sizes="152x152" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-114.png" sizes="114x114" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-120.png" sizes="120x120" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-167.png" sizes="167x167" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-167.png" sizes="180x180" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-58.png" sizes="58x58" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-76.png" sizes="76x76" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-80.png" sizes="80x80" type="image/png">
-<link rel="apple-touch-icon" href="/static/logo/peach-87.png" sizes="87x87" type="image/png">
+<link rel="icon" href="/static/logo/peach-v2-180.png" sizes="180x180" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-152.png" sizes="152x152" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-114.png" sizes="114x114" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-120.png" sizes="120x120" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-167.png" sizes="167x167" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-167.png" sizes="180x180" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-58.png" sizes="58x58" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-76.png" sizes="76x76" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-80.png" sizes="80x80" type="image/png">
+<link rel="apple-touch-icon" href="/static/logo/peach-v2-87.png" sizes="87x87" type="image/png">
 <link rel="preload" href="/static/peach.min.css?{{ .Version }}" as="style" />
 <style>@import url("/static/peach.min.css?{{ .Version }}");</style>
