--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -2,7 +2,7 @@
 	<div class="footer">
 		<div class="logo-container">
 			<a href="{{ . }}">
-				<img src="/static/logo/peach-180.png"
+				<img src="/static/logo/peach-v2-180.png"
 					width="20" height="20" alt="[ peach logo ]" />
 			</a>
 		</div>
