--- a/static/peach.css
+++ b/static/peach.css
@@ -63,6 +63,7 @@ body {
 .now-container {
     display: flex;
     flex-direction: column;
+    row-gap: 5px;
 }
 
 .temperature-forecast-container {
@@ -82,11 +83,19 @@ body {
     text-align: center;
 }
 
-.wind-container {
+.misc-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    column-gap: 10px;
+    column-gap: 20px;
+}
+
+.wind-container,
+.humidity-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 5px;
     color: rgb(10,10,10);
 }
 
