templates/about.tmpl: update privacy section
Make it terse.

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -40,8 +40,7 @@
 					</div>
 					<div class="content">
 						<p>Peach does not use cookies. It does not
-						track your location and it wants to know
-						nothing about you.</p>
+						    track you.</p>
 					</div>
 				</div> <!-- privacy-container end -->
 
