templates/about.tmpl: update t&p sections

--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -28,9 +28,8 @@
 					<div class="content">
 						<p>
 							It is licensed under the
-							<a href="//git.ricketyspace.net/peach/tree/LICENSE">ISC license</a>. Your
-							use of this service indicates an implicit
-							agreement to the terms of this license.</p>
+							<a href="//git.ricketyspace.net/peach/tree/LICENSE">ISC license</a>.
+						</p>
 					</div>
 				</div> <!-- terms-container end -->
 
@@ -39,7 +38,7 @@
 						<h2>privacy</h2>
 					</div>
 					<div class="content">
-						<p>Peach does not use cookies. It does not
+						<p>Peach does not use cookies and it does not
 						    track you.</p>
 					</div>
 				</div> <!-- privacy-container end -->
